@@ -10,6 +10,8 @@ export(get_pp_samplegroup)
 export(muts2pp)
 export(set_colors)
 export(set_tools)
+export(show_handers)
+export(show_mhanders)
 import(configr)
 import(stringr)
 import(utils)
