@@ -1,6 +1,8 @@
 Title = "ngstk mhander configuration file"
 
 [mhander]
-default_mhanders = ["mhander_fusions_left_match", "mhander_fusions_right_match",
+[mhander.default_mhanders]
+mhander_funs = ["mhander_fusions_left_match", "mhander_fusions_right_match",
                      "mhander_fusions_any_match", "mhander_fusions_full_match",
                      "mhander_fusions_anyfull_match"]
+descripition = "ngstk default mhander lib"
